# new-portfolio

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
client/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts
client/app/: globals.css  layout.tsx  page.tsx  robot.ts  sitemap.ts
client/app/message/: page.tsx
client/app/sentry-example-page/: page.tsx
client/components/main/: About.tsx  Contact.tsx  Experience.tsx  ExperiencecTimeline.tsx  Footer.tsx  Header.tsx  LandingPage.tsx  Navbar.tsx  Password_validation.tsx  Project.tsx  ProjectLists.tsx  TechStack.tsx  WhishperMe.tsx
client/components/ui/: animated-tooltip.tsx  card-hover-effect.tsx  card.tsx  focus-cards.tsx  layout-text-flip.tsx  loader.tsx  moving-border.tsx  stateful-button.tsx
client/lib/: ContactPeoplr.ts  ProjectCard.ts  about-lib.ts  experience-lib.ts  techStack.ts
components/aceternity/: DottedGlowBackgroundDemoSecond.tsx  FloatingNavDemo.tsx
components/main/: About.tsx  Experience.tsx  Header.tsx  LandingPage.tsx  MainPage.tsx  Navbar.tsx  TechStack.tsx  WhishperMe.tsx
components/ui/: background-ripple-effect.tsx  dotted-glow-background.tsx  floating-navbar.tsx  moving-border.tsx  stateful-button.tsx
server/: .env  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
server/app/: main.py
server/app/core/: config.py  setting.py
server/app/db/: database.py
server/app/models/: message_model.py
server/app/routers/: message_router.py
server/app/schemas/: message_schema.py
server/app/services/: message_service.py
server/docker/: Dockerfile
